welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit=false
  while (vuBiscuit==false) {
    for (i<- 1 to 6) {
      avance;
      if (estSurBiscuit) {
        vuBiscuit=true;
        return true
      }
    }
    for (i<-1 to 6) {
      recule
    }
    droite;
    avance;
    gauche
  }
}

haveBaggle()